--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ data/~$home.xlsx
 docs/~$per Format.doc
 docs/~$search Paper Format.docx
 docs/~WRL0003.tmp
+docs/~WRL0005.tmp
+docs/~$me - Quick Documentation.docx
+docs/~WRL0163.tmp
