Ignore junk files

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ docs/~WRL0005.tmp
 docs/~$me - Quick Documentation.docx
 docs/~WRL0163.tmp
 docs/~WRL2105.tmp
+docs/~$me - Research Paper - Sudhanva.docx
