Home research paper

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ docs/~$me - Quick Documentation.docx
 docs/~WRL0163.tmp
 docs/~WRL2105.tmp
 docs/~$me - Research Paper - Sudhanva.docx
+docs/~WRL0004.tmp
