Added single column paper

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ docs/~WRL2105.tmp
 docs/~$me - Research Paper - Sudhanva.docx
 docs/~WRL0004.tmp
 docs/~WRL0418.tmp
+docs/~$me - Report.docx
+docs/~$me - Research Paper - Sudhanva -Single Column.docx
