--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ docs/~WRL0004.tmp
 docs/~WRL0418.tmp
 docs/~$me - Report.docx
 docs/~$me - Research Paper - Sudhanva -Single Column.docx
+docs/~WRL1628.tmp
