--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ docs/~WRL0418.tmp
 docs/~$me - Report.docx
 docs/~$me - Research Paper - Sudhanva -Single Column.docx
 docs/~WRL1628.tmp
+docs/~WRL1315.tmp
