--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ docs/~$me - Report.docx
 docs/~$me - Research Paper - Sudhanva -Single Column.docx
 docs/~WRL1628.tmp
 docs/~WRL1315.tmp
+docs/~$Home.pptx
